books section added

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 @tailwind utilities;
 
 body{
-  font-family: "Playfair Display", serif;
+  font-family: "Work Sans", sans-serif;  
 }
 
-.work-sans-font{
-  font-family: "Work Sans", sans-serif;
+.playfair-display-font{
+  font-family: "Playfair Display", serif;
 }
